[gd_scene load_steps=5 format=3 uid="uid://dfwgvi5kn4ifi"]

[ext_resource type="Script" path="res://Scripts/SST_Task_Manager.gd" id="1_hrvas"]
[ext_resource type="PackedScene" uid="uid://cdt6315of2aeu" path="res://SubScenes/Ball_Feeder.tscn" id="2_rgtr6"]
[ext_resource type="PackedScene" uid="uid://ca41om8xqbbts" path="res://SubScenes/Defender.tscn" id="3_t0scl"]
[ext_resource type="PackedScene" uid="uid://cm3ee373qph5v" path="res://SubScenes/Teammate.tscn" id="4_pxf4c"]

[node name="SST_Task_Manager" type="Node3D"]
script = ExtResource("1_hrvas")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.8, 0)
current = true

[node name="PlaceholderBallFeederLeft" type="Node3D" parent="."]
transform = Transform3D(-0.630744, 0, 0.775991, 0, 1, 0, -0.775991, 0, -0.630744, -8.0147, 0, 5.53492)

[node name="BallFeeder" parent="PlaceholderBallFeederLeft" instance=ExtResource("2_rgtr6")]

[node name="PlaceholderBallFeederRight" type="Node3D" parent="."]
transform = Transform3D(0.644257, 0, 0.764809, 0, 1, 0, -0.764809, 0, 0.644257, -8.015, 0, -5.535)

[node name="PlaceholderDefenderLeft" type="Node3D" parent="."]
transform = Transform3D(-0.693791, 0, 0.720176, 0, 1, 0, -0.720176, 0, -0.693791, -10.8796, 1, 4)

[node name="Defender" parent="PlaceholderDefenderLeft" instance=ExtResource("3_t0scl")]
transform = Transform3D(0.999691, 0, -0.0248683, 0, 1, 0, 0.0248683, 0, 0.999691, 0, 0, 0)

[node name="PlaceholderDefenderRight" type="Node3D" parent="."]
transform = Transform3D(0.456368, 0, 0.889791, 0, 1, 0, -0.889791, 0, 0.456368, -10.8796, 1, -4)

[node name="Defender" parent="PlaceholderDefenderRight" instance=ExtResource("3_t0scl")]

[node name="PlaceholderFixation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0, 0)

[node name="Teammate" parent="PlaceholderFixation" instance=ExtResource("4_pxf4c")]

[node name="DefenderCenter" parent="." instance=ExtResource("3_t0scl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -15)

[node name="DefenderGK" parent="." instance=ExtResource("3_t0scl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 1, 0)
